# op-loader

./: Cargo.toml  Makefile  README.md  mise.toml
.github/workflows/: ci.yaml  homebrew-publish.yml
HomebrewFormula/: op-loader.rb
src/: app.rs  cache.rs  cli.rs  command_log.rs  event.rs  keychain.rs  main.rs  ui.rs
