[package]
name = "op-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
confy = "2.0.0"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
