[package]
name = "op-loader"
version = "0.3.0"
edition = "2024"
authors = ["Matthew Lese matthewjlese@gmail.com"]
description = "TUI for configuring 1password secrets for injection into your shell environment"
license = "MIT"
repository = "https://github.com/idiomattic/op-loader"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
confy = "2.0.0"
crossterm = "0.29.0"
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
log = "0.4.29"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_fs = "1.1.3"
filetime = "0.2.25"
